# vault-client-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  deny.toml  docker-compose.yml  renovate.json  rust-toolchain.toml
.config/: nextest.toml
.github/workflows/: ci.yaml  renovate.yml  upstream-sync.yml
crates/vault-client-rs/: Cargo.toml
crates/vault-client-rs-test/: Cargo.toml
crates/vault-client-rs-test/src/: lib.rs  mock.rs
crates/vault-client-rs/src/: circuit_breaker.rs  renewal.rs
crates/vault-client-rs/src/api/sys/: raft.rs
crates/vault-client-rs/src/client/: async_client.rs  blocking_client.rs
crates/vault-client-rs/src/types/: kv.rs  redaction.rs  response.rs  transit.rs
crates/vault-client-rs/tests/integration/: pki_test.rs
crates/vault-client-rs/tests/mock/: blocking_review_test.rs  circuit_breaker_test.rs  client_test.rs  lease_watcher_test.rs  lifecycle_test.rs  main.rs  new_sys_test.rs  response_redaction_test.rs  retry_semantics_test.rs
crates/vault-client-rs/tests/unit/: auth_pki_types_test.rs  error_http_test.rs  main.rs  new_types_test.rs  response_redaction_test.rs  secret_types_test.rs  sys_misc_types_test.rs  transit_types_test.rs  types_test.rs
docs/: BLOCKING_REVIEW.md  MUTATION_REVIEW.md
mutants.out/: caught.txt  lock.json  mutants.json  outcomes.json  unviable.txt
mutants.out.old/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json
mutants.out.old/diff/: crates__vault-client-rs__src__circuit_breaker.rs_line_100_col_34.diff  crates__vault-client-rs__src__circuit_breaker.rs_line_52_col_9.diff  crates__vault-client-rs__src__circuit_breaker.rs_line_56_col_36.diff  crates__vault-client-rs__src__circuit_breaker.rs_line_70_col_36.diff  crates__vault-client-rs__src__circuit_breaker.rs_line_84_col_9.diff  crates__vault-client-rs__src__circuit_breaker.rs_line_94_col_9.diff  crates__vault-client-rs__src__circuit_breaker.rs_line_99_col_58.diff  crates__vault-client-rs__src__circuit_breaker.rs_line_99_col_58_001.diff  crates__vault-client-rs__src__types__error.rs_line_101_col_9.diff  crates__vault-client-rs__src__types__error.rs_line_101_col_9_001.diff  crates__vault-client-rs__src__types__error.rs_line_104_col_13.diff  crates__vault-client-rs__src__types__error.rs_line_107_col_13.diff  crates__vault-client-rs__src__types__error.rs_line_61_col_9.diff  crates__vault-client-rs__src__types__error.rs_line_73_col_9.diff  crates__vault-client-rs__src__types__error.rs_line_86_col_9.diff  crates__vault-client-rs__src__types__error.rs_line_87_col_13.diff  crates__vault-client-rs__src__types__error.rs_line_87_col_45.diff  crates__vault-client-rs__src__types__error.rs_line_88_col_13.diff  crates__vault-client-rs__src__types__error.rs_line_96_col_9_001.diff
mutants.out/diff/: crates__vault-client-rs__src__types__error.rs_line_101_col_9_002.diff  crates__vault-client-rs__src__types__error.rs_line_102_col_13.diff  (+9 more)
tools/: git_hook_commit-msg.sh
