[package]
name = "vault-client-rs"
description = "A Rust client for the HashiCorp Vault HTTP API"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["vault", "hashicorp", "secrets", "client"]
categories = ["api-bindings", "authentication"]

[features]
default = []
blocking = []
auto-renew = ["tokio-util", "tokio/macros"]

[dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json", "gzip", "rustls"] }
tokio = { version = "1", features = ["rt", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
secrecy = { version = "0.10", features = ["serde"] }
tracing = "0.1"
url = "2"
rand = "0.10"
base64 = "0.22"
zeroize = { version = "1", features = ["zeroize_derive"] }
home = "0.5"
tokio-util = { version = "0.7", features = ["rt"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
# Used only to construct a real transport-level error for VaultError::Http
# coverage/mutation tests. Mirrors the main dependency's TLS backend so no
# extra (e.g. OpenSSL) crates enter the graph.
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
wiremock = "0.6"
proptest = "1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
vault-client-rs-test = { path = "../vault-client-rs-test" }
